--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "*.js", "use": "@vercel/node" }],
-  "routes": [{ "source": "/(.*)", "destination": "/index.js" }]
+  "routes": [{ "source": "/(.*)", "destination": "/" }]
 }
